Added CSS/HTML Changes

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <div class="header">
         <h1>The SideWalk</h1>
-        <div class="logo"><img src="logo.jpg" alt="Logo" width="100px" height="100px">
+        <div class="logo"><img class="walkingMan" src="logo.jpg" alt="Logo">
         </div>
         
         <div class="nav-bar">
             <ul>
-                <li><a href="fakewebsite">Home</a></li>
-                <li><a href="fakewebsite">Menu</a></li>
-                <li><a href="fakewebsite">Order Here</a></li>
-                <li><a href="fakewebsite">About Us</a></li>
+                <li class="nav"><a href="fakewebsite">Home</a></li>
+                <li class="nav"><a href="fakewebsite">Menu</a></li>
+                <li class="nav"><a href="fakewebsite">Order Here</a></li>
+                <li class="nav"><a href="fakewebsite">About Us</a></li>
             </ul>
         </div>
     </div>
@@ -30,11 +30,13 @@
 
     <div class="SS">
         <div class="Seasonal">Seasonal Specials</div>
-            <div class="Special"><img src="special1.jpg" alt="Super Dark" width="100px" height="100px"> Super Dark</div>
-            <div class="Special"><img src="special2.jpg" alt="Summer Breeze " width="100px" height="100px">Summer Breeze</div>
-            <div class="Special"><img src="special3.jpg" alt="Mocha Sunrise" width="100px" height="100px">Mocha Sunrise</div>
-            <div class="Special"><img src="special4.jpg" alt="Vanilla Sunflower Latte" width="100px" height="100px">Vanilla Sunflower Latte</div>
-    </div>
+            <div class="Drinks">
+                <div class="Special"><img src="special1.jpg" class="specialD" alt="Super Dark" width="100px" height="100px"> <div class="imgTxt">Super Dark</div></div>
+                <div class="Special"><img src="special2.jpg" class="specialD" alt="Summer Breeze " width="100px" height="100px"> <div class="imgTxt">Summer Breeze</div></div>
+                <div class="Special"><img src="special3.jpg" class="specialD" alt="Mocha Sunrise" width="100px" height="100px"> <div class="imgTxt">Mocha Sunrise</div></div>
+                <div class="Special"><img src="special4.jpg" class="specialD" alt="Vanilla Sunflower Latte" width="100px" height="100px"> <div class="imgTxt">Vanilla Sunflower Latte</div></div>
+            </div>
+        </div>
 
     <div class="Quote">
         "I believe humans get a lot done, not because we're smart, but because we have thumbs so we can make coffee." — Flash Rosenberg
@@ -43,15 +45,15 @@
     <div class="footer">
         <div class="left-side-footer">
             <ul>
-                <li><a href="fakewebsite">Contact us</a></li>
-                <li><a href="fakewebsite">Careers</a></li>
+                <li><a href="fakewebsite" class="footL">Contact us</a></li>
+                <li><a href="fakewebsite" class="footL">Careers</a></li>
             </ul>
         </div>
 
         <div class="right-side-footer">
             <ul>
-                <li><a href="fakewebsite">Donate</a></li>
-                <li><a href="fakewebsite">Volunteer</a></li>
+                <li><a href="fakewebsite" class="footL">Donate</a></li>
+                <li><a href="fakewebsite" class="footL">Volunteer</a></li>
             </ul>
         </div>
     </div>
